# payment-clock

./: .gitignore  CLAUDE.md  README.ja.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-lp.yml  release.yml
lp/: index.html  package-lock.json  package.json  vite.config.ts
lp/src/: App.tsx  content.ts  index.css
scripts/: generate-og-image.mjs  inject-dmg-readme.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dmg-resources/: README.txt
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  timestamp.rs
src-tauri/src/commands/: account.rs  event.rs  mod.rs  resource.rs  tax.rs  test_clock.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/models/: account.rs  event.rs  mod.rs  operation.rs  resource_snapshot.rs  test_clock.rs
src-tauri/src/stripe/: account.rs  cli.rs  client.rs  compat.rs  customer.rs  event.rs  invoice.rs  meter.rs  mod.rs  payment_intent.rs  payment_method.rs  product.rs  subscription.rs  tax_rate.rs  test_clock.rs
src/components/: AccountCard.tsx  AccountList.tsx  AccountSelectScreen.tsx  AdvanceTimeDialog.tsx  ApiKeyInput.tsx  BillingHistory.tsx  CreateCustomerDialog.tsx  CreatePaymentMethodDialog.tsx  CreateSubscriptionDialog.tsx  CreateTestClockDialog.tsx  CustomerResourceCard.tsx  CustomerSection.tsx  CustomerTabContent.tsx  CustomerTabs.tsx  DashboardScreen.tsx  DashboardShell.tsx  DropdownMenu.tsx  ErrorBanner.tsx  EventItem.tsx  InvoiceSection.tsx  (+12 more)
(+67 files in other folders)
